--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,9 +33,9 @@ dependencies:
   dropdown_button2: ^1.6.2
   flutter_calendar_carousel: ^2.1.0
   provider: ^6.0.0
-  table_calendar: ^3.0.6
+  table_calendar: ^3.0.9
   google_fonts: ^3.0.1
-  intl: ^0.17.0
+  intl: ^0.18.0
   cast: ^1.1.0
   image_picker: ^0.8.5+3
   video_player: ^2.4.5
@@ -54,7 +54,7 @@ dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  
+
   flutter_rating_bar: 4.0.0
   http: ^0.13.4
   shared_preferences: ^2.0.15
@@ -64,7 +64,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
- 
 
 dev_dependencies:
   flutter_test:
@@ -84,7 +83,6 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
- 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
